--- a/postgres/templates/deployment.yaml
+++ b/postgres/templates/deployment.yaml
@@ -12,26 +12,33 @@ spec:
       labels:
         app: {{ .Release.Name }}-postgres
     spec:
+      initContainers:
+        - name: init-postgres-data
+          image: busybox
+          command: ['sh', '-c', 'mkdir -p /var/lib/postgresql/data/db && chown 999:999 /var/lib/postgresql/data/db']
+          volumeMounts:
+            - name: postgres-data
+              mountPath: /var/lib/postgresql/data
       containers:
         - name: postgres
-          image: postgres:{{ .Values.appVersion }}  # Ensure this value is defined in values.yaml
+          image: postgres:{{ .Values.appVersion }}
           env:
             - name: POSTGRES_DB
-              value: "{{ .Values.postgresql.database }}"  # Ensure this value is defined in values.yaml
+              value: "{{ .Values.postgresql.database }}"
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
                   name: {{ .Release.Name }}-postgres-secret
-                  key: postgres-username  # Ensure the key exists in the secret
+                  key: postgres-username
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: {{ .Release.Name }}-postgres-secret
-                  key: postgres-password  # Ensure the key exists in the secret
+                  key: postgres-password
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
       volumes:
         - name: postgres-data
           persistentVolumeClaim:
-            claimName: {{ .Release.Name }}-postgres-pvc  # Ensure the PVC exists
+            claimName: {{ .Release.Name }}-postgres-pvc
