--- a/postgres/templates/secret.yaml
+++ b/postgres/templates/secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: <release-name>-postgres-secret
+  name: {{ .Release.Name }}-postgres-secret
 type: Opaque
 data:
-  postgres-username: <base64-encoded-username>
-  postgres-password: <base64-encoded-password>
+  postgres-username: {{ .Values.postgresql.username | b64enc | quote }}
+  postgres-password: {{ .Values.postgresql.password | b64enc | quote }}
