--- a/postgres/templates/route.yaml
+++ b/postgres/templates/route.yaml
@@ -2,6 +2,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: {{ .Release.Name }}-postgres-route
+  namespace: {{ .Release.Namespace }}
 spec:
   to:
     kind: Service
