--- a/postgres/templates/service.yaml
+++ b/postgres/templates/service.yaml
@@ -2,9 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Release.Name }}
+  namespace: {{ .Release.Namespace }}
 spec:
   ports:
     - port: 5432
       targetPort: 5432
   selector:
     app: {{ .Release.Name }}
+  type: ClusterIP 
