--- a/postgres/Chart.yaml
+++ b/postgres/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: postgres-app
+name: postgres
 description: A Helm chart for deploying PostgreSQL on OpenShift
 version: 0.1.0
-appVersion: "13"  # The version of PostgreSQL container image you want to use
+appVersion: "13.3"  # The version of PostgreSQL container image you want to use
